--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -2,14 +2,20 @@
     <link href="http://gmpg.org/xfn/11" rel="profile">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     {# <link href='//fonts.googleapis.com/css?family=Lato:400,700,400italic|Droid+Sans+Mono' rel='stylesheet' type='text/css'> #}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="description" content="Full stack developer, musician and artist">
-    <title>{% if title %}{{ title }} &middot; {{ siteTitle }}{% else %}{{ siteTitle }}{% endif %}</title>
+    <title>
+        {% if title %}{{ title }} &middot; {{ siteTitle }}
+        {% else %}{{ siteTitle }}
+        {% endif %}
+    </title>
 
     <!-- CSS -->
-    {# <link rel="stylesheet" href="/public/css/styles.min.css">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400"> #}
+    <link rel="stylesheet" href="/assets/main.css">
+    {#<link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400"> #}
 
     <!-- Icons -->
     {# <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
