--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -4,10 +4,11 @@ siteTitle: Oded Welgreen
 <!doctype html>
 <html lang="en">
   {% include "../components/head.njk" %}
-  <body>
+  <body class="bg-gray-300 text-gray-700">
     {% include "../components/nav.njk" %}
     {{ content | safe }}
     {% include "../components/footer.njk" %}
+    {% include "../components/scripts.njk" %}
     {% include "../components/analytics.njk" %}
   </body>
 </html>
