--- a/styles/main.css
+++ b/styles/main.css
@@ -73,5 +73,16 @@ h1 {
   @apply font-serif;
 }
 
-.project-list {
+.music-youtube-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.music-youtube {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
